Update client side system test and data initialization